src/css/notes.css
.notes table {
	border-collapse: collapse;
	margin: 0 2px;
}
.notes caption {
	margin: .5em;
	text-align: left;
}
.notes thead th {
	position: sticky;
	top: 0;
	z-index: 1;
	background: canvas;
	text-align: left;
	white-space: nowrap;
}
.notes tbody,
.notes tbody * {
	scroll-margin-top: var(--table-header-height);
}
.notes thead th button.expander {
	position: relative;
	box-sizing: border-box;
	width: 17px;
	height: 17px;
	vertical-align: text-top;
}
.notes thead th button.expander > svg {
	position: absolute;
	inset: 0;
	width: 100%;
	height: 100%;
}
.notes thead th button.expander.hor-out > svg {
	--table-expander-hor-out-part-visibility: visible;
}
.notes thead th button.expander.hor-in > svg {
	--table-expander-hor-in-part-visibility: visible;
}
.notes thead th button.expander.ver-out > svg {
	--table-expander-ver-out-part-visibility: visible;
}
.notes thead th button.expander.ver-in > svg {
	--table-expander-ver-in-part-visibility: visible;
}
.notes tbody {
	position: relative;
}
.notes tbody.status-open {
	box-shadow: -2px 0px 0px 0px red, 2px 0px 0px 0px red;
}
.notes tbody.status-closed {
	box-shadow: -2px 0px 0px 0px green, 2px 0px 0px 0px green;
}
.notes tbody.status-hidden {
	box-shadow: -2px 0px 0px 0px black, 2px 0px 0px 0px black;
}
.notes tbody.active-hover::before {
	content: '';
	display: block;
	position: absolute;
	inset: 0;
	background: var(--hover-color);
	z-index: -1;
}
@keyframes active-click-fade {
	from { background: var(--click-color); }
	to { background: transparent; }
}
.notes tbody.active-click {
	animation-name: active-click-fade;
	animation-duration: 3s;
}
.notes td {
	vertical-align: top;
}
.notes td,
.notes th {
	padding: 2px;
}
.notes td.note-link > div {
	position: relative;
	display: grid;
}
.notes tbody[data-updated] td.note-link > div::after {
	content: '';
	position: absolute;
	top: 0;
	right: -2px;
	border: solid 3px var(--refresh-color);
	border-radius: 3px;
}
.notes td.note-link > div progress {
	grid-row: 1;
	grid-column: 1;
	position: absolute;
	z-index: -1;
	height: 2px;
	width: 100%;
	bottom: 0;
	left: 0;
	border: 0;
	opacity: .7;
	background: transparent;
}
.notes td.note-link > div progress::-webkit-progress-bar {
	background: transparent;
}
.notes td.note-link > div progress::-moz-progress-bar {
	background-color: var(--refresh-color);
}
.notes td.note-link > div progress::-webkit-progress-value {
	background-color: var(--refresh-color);
}
.notes td.note-date {
	white-space: nowrap;
}
.notes td.note-user {
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}
.notes td.note-user a:not([href]) {
	opacity: .7;
}
.notes td.note-user .uid {
	opacity: .7;
	font-size: .7em;
	font-family: sans-serif;
}
.notes td.note-action [class|=icon] {
	position: relative;
	display: inline-block;
	width: 16px;
	height: 16px;
	vertical-align: text-top;
}
.notes td.note-action [class|=icon] > svg {
	position: absolute;
	inset: 0;
	width: 100%;
	height: 100%;
}
.notes td.note-action [class|=icon-status-open] > svg {
	--table-note-default-part-visibility: hidden;
	--table-note-open-part-visibility: visible;
}
.notes td.note-action [class|=icon-status-closed] > svg {
	--table-note-default-part-visibility: hidden;
	--table-note-closed-part-visibility: visible;
}
.notes td.note-action [class|=icon-status-commented] > svg {
	--table-note-default-part-visibility: hidden;
	--table-note-commented-part-visibility: visible;
}
.notes td.note-action [class|=icon-status-hidden] > svg {
	--table-note-default-part-visibility: hidden;
	--table-note-hidden-part-visibility: visible;
}
.notes td.note-action [class|=icon-comments-count] > svg text {
	font-family: sans-serif;
	font-size: 10px;
	text-anchor: middle;
	dominant-baseline: central;
}
.notes td.note-comment {
	--comment-img-gap-size: 2px;
	--comment-link-outline: solid orange var(--comment-img-gap-size);
	white-space: pre-wrap;
	overflow-wrap: anywhere;
	width: 100%;
}
.notes td.note-comment:empty::before {
	content: "no comment";
	color: gray;
}
.notes td.note-comment a.image:hover,
.notes td.note-comment a.image.active {
	outline: var(--comment-link-outline)
}
.notes td.note-comment a.image.float {
	display: none;
	float: right;
	max-width: 25%;
	margin-left: var(--comment-img-gap-size);
	margin-bottom: var(--comment-img-gap-size);
}
.notes td.note-comment a.image.float img {
	display: block;
	max-width: 100%;
	max-height: 25vh;
}
.notes table.with-images td.note-comment a.image.float {
	display: block;
}
.notes table.only-date td.note-date time > span {
	display: none;
}
.notes table.only-short-username td.note-user {
	max-width: 20vw;
}
body.flipped table.only-short-username td.note-user {
	max-width: 10vw;
}
.notes table.only-short-username td.note-user .uid {
	display: none;
}
.notes table.only-first-comments tr:not(:first-child) {
	display: none;
}
.notes table.only-first-comments td.note-action [class|=icon-status] {
	display: none;
}
.notes table:not(.only-first-comments) td.note-action [class|=icon-comments-count] {
	display: none;
}
.notes table.one-line-comments td.note-comment {
	white-space: nowrap;
	overflow: hidden;
}

